Align Memory and Maven requirements with reality encoded in the pom.xml files
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1072682 13f79535-47bb-0310-9956-ffa450edef68