@@ -23,7 +23,7 @@ Getting started
 ---------------
 
 You need a Java 5 (or higher) JDK and Maven 2 (http://maven.apache.org/,
-version 2.0.7 or higher) to build Sling.
+version 2.2.1 or higher) to build Sling.
 
 Sling depends on artifacts and plugins available only in the Incubator Maven
 repository at Apache. You can make this repository available to Maven by
@@ -57,16 +57,17 @@ adding the following profile in your ~/.m2/settings.xml configuration file:
 
 Once you have everything in place, run
 
-    MAVEN_OPTS=-Xmx256m mvn clean install
+    MAVEN_OPTS="-Xmx256M -XX:MaxPermSize=256M" mvn clean install
 
-in this directory. This will build, test and install the Sling modules
-in your local Maven repository.
+in this directory (on 64bit platforms you might want to use 512M instead
+of 256M). This will build, test and install the Sling modules in your local
+Maven repository.
 
 Some modules might not be listed in the pom.xml found in this directory,
 those won't be built by the above command. If you need one of these 
 modules, run "mvn clean install" in the directory that contains its
 pom.xml file.
 
-To get started with Sling, start the launchpad/launchpad-webapp module,
+To get started with Sling, start the launchpad/builder module,
 see README.txt in that module's directory.
 
